# workflow

camke/demo1/: main.cc
camke/demo2/: CMakeLists.txt  main.cc
cmake/demo1/: CMakeLists.txt
cmake/demo2/: CMakeLists.txt
cmake/demo2/math/: CMakeLists.txt  power.cc
cmake/demo3/: CMakeLists.txt  main.cc
